--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<hea
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>EmotiVista</title>
   <link href="css/style.css" type="text/css" rel="stylesheet">
