--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en>
+<head
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>EmotiVista</title>
   <link href="css/style.css" type="text/css" rel="stylesheet">
@@ -13,7 +13,7 @@
     <nav id="primary">
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        i><a href="about.html">About</a></li>
         <li class="dropdown">
           <a href="#" class="hover">Workshops</a>
           <ul class="drop-down">
